# serpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/serpp/: concepts.hpp  macros.hpp  optional_ref.hpp
include/serpp/json/: hash_map.hpp  jarray.hpp  jobject.hpp  json.hpp  jvalue.hpp  optional_ref.hpp  parse.hpp
include/serpp/json/detail/: array.hpp  compressed_pair.hpp  hash_map.hpp
include/serpp/parse/: parse.hpp
resources/: test.json
src/json/: jarray.cpp  jobject.cpp  jvalue.cpp
src/json/detail/: array.cpp  compressed_pair.cpp  hash_map.cpp
tests/: CMakeLists.txt  json_hash_map_tests.cpp  json_object_tests.cpp  json_parse_tests.cpp  parse_tests.cpp
tests/json/: jarray_tests.cpp  jobject_tests.cpp  jvalue_tests.cpp
